2.0.0 (October XX, 2024)
 - Added support for targeting rules based on large segments.
 - Added `factory.destroy()` method, which invokes the `destroy` method on all SDK clients created by the factory.
 - Updated internal storage factory to emit the SDK_READY_FROM_CACHE event when it corresponds, to clean up the initialization flow.
 - Updated the handling of timers and async operations by moving them into an `init` factory method to enable lazy initialization of the SDK. This update is intended for the React SDK.
 - Bugfixing - Fixed an issue with the server-side polling manager that caused dangling timers when the SDK was destroyed before it was ready.
 - BREAKING CHANGES:
   - Updated default flag spec version to 1.2.
   - Removed `/mySegments` endpoint from SplitAPI module, as it is replaced by `/memberships` endpoint.
   - Removed support for MY_SEGMENTS_UPDATE and MY_SEGMENTS_UPDATE_V2 notification types, as they are replaced by MEMBERSHIPS_MS_UPDATE and MEMBERSHIPS_LS_UPDATE notification types.

1.17.0 (September 6, 2024)
 - Added `sync.requestOptions.getHeaderOverrides` configuration option to enhance SDK HTTP request Headers for Authorization Frameworks.
 - Added `isTimedout` and `lastUpdate` properties to IStatusInterface to keep track of the timestamp of the last SDK event, used on React and Redux SDKs.
 - Updated some transitive dependencies for vulnerability fixes.

1.16.0 (June 13, 2024)
 - Added the `getOptions` method to the `IPlatform` interface to allow the SDK to pass request options to the `fetch` function and `EventSource` constructor when fetching data from the Split servers. The method is optional and, if provided, it is called twice: first for the `fetch` options and then for the `EventSource` options. Useful for advanced use cases like configuring a proxy or validating HTTPS certificates in NodeJS.